--- a/styles.css
+++ b/styles.css
@@ -3617,8 +3617,7 @@ Author: sugar
 
 .gantt-task-list-item__text {
 	flex: 1;
-	overflow: hidden;
-	text-overflow: ellipsis;
+	white-space: nowrap;
 	cursor: pointer;
 }
 
